# tinyinfer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: allocator.h  common.h  mat.h
src/: CMakeLists.txt  allocator.cpp  mat.cpp  mat_pixel.cpp
test/: CMakeLists.txt  prng.h  test_mat.cpp  test_mat_pixel.cpp
tools/: CMakeLists.txt  onnx.proto  onnx2tinyinfer.cpp
